# amplifier-module-hooks-streaming-ui

./: .gitignore  README.md  pyproject.toml
.beads/: amplifier-dev.jsonl
amplifier_module_hooks_streaming_ui/: __init__.py
tests/: test_behavioral.py  test_streaming_ui.py  test_validation.py
