[project]
name = "amplifier-module-hooks-streaming-ui"
version = "1.0.0"
description = "Streaming UI display hooks for Amplifier - displays thinking blocks and tool invocations to console"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
]

[project.entry-points."amplifier.modules"]
hooks-streaming-ui = "amplifier_module_hooks_streaming_ui:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "amplifier-core",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.0.0",
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

